// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoreScreen component should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      },
      Object {
        "backgroundColor": "#F2F2F2",
      },
    ]
  }
>
  <ListView
    automaticallyAdjustContentInsets={false}
    dataSource={
      Object {
        "_data": Object {
          "account": Array [
            Object {
              "accessibilityLabel": "Notifications",
              "leadIcon": "empty-space",
              "onPress": "goToNotifications",
              "text": "Notifications",
            },
            Object {
              "accessibilityLabel": "My Projects",
              "disabled": [Function],
              "leadIcon": "ios-lock",
              "onPress": "goToProjects",
              "text": "Projects",
            },
            Object {
              "accessibilityLabel": "My Favorites",
              "disabled": [Function],
              "leadIcon": "ios-lock",
              "onPress": "goToFavorites",
              "text": "Favorites",
            },
            Object {
              "accessibilityLabel": "Account Details",
              "leadIcon": "ios-lock",
              "measure": "ACCOUNT_DETAILS_BUTTON",
              "onPress": "goToAccountDetails",
              "text": "Account Details",
            },
            Object {
              "accessibilityLabel": "Orders",
              "leadIcon": "ios-lock",
              "measure": "ORDERS_BUTTON",
              "onPress": "goToOrders",
              "text": "Orders",
            },
            Object {
              "accessibilityLabel": "Returns",
              "leadIcon": "ios-lock",
              "onPress": "goToReturns",
              "text": "Returns",
            },
            Object {
              "accessibilityLabel": "Lookback",
              "allowGuest": true,
              "disabled": [Function],
              "leadIcon": "ios-lock",
              "onPress": "goToLookback",
              "text": "Lookback",
            },
            Object {
              "accessibilityLabel": "Development Options",
              "allowGuest": true,
              "disabled": [Function],
              "leadIcon": "ios-lock",
              "onPress": "showDevOptions",
              "text": "Development Options",
            },
          ],
        },
        "getRowCount": [Function],
      }
    }
    renderFooter={[Function]}
    renderHeader={[Function]}
    renderRow={[Function]}
    renderSectionHeader={[Function]}
    scrollsToTop={true}
  />
</View>
`;

exports[`MoreScreen component should render when logged in 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      },
      Object {
        "backgroundColor": "#F2F2F2",
      },
    ]
  }
>
  <ListView
    automaticallyAdjustContentInsets={false}
    dataSource={
      Object {
        "_data": Object {
          "account": Array [
            Object {
              "accessibilityLabel": "Notifications",
              "onPress": "goToNotifications",
              "text": "Notifications",
            },
            Object {
              "accessibilityLabel": "My Projects",
              "disabled": [Function],
              "onPress": "goToProjects",
              "text": "Projects",
            },
            Object {
              "accessibilityLabel": "My Favorites",
              "disabled": [Function],
              "onPress": "goToFavorites",
              "text": "Favorites",
            },
            Object {
              "accessibilityLabel": "Account Details",
              "measure": "ACCOUNT_DETAILS_BUTTON",
              "onPress": "goToAccountDetails",
              "text": "Account Details",
            },
            Object {
              "accessibilityLabel": "Orders",
              "measure": "ORDERS_BUTTON",
              "onPress": "goToOrders",
              "text": "Orders",
            },
            Object {
              "accessibilityLabel": "Returns",
              "onPress": "goToReturns",
              "text": "Returns",
            },
            Object {
              "accessibilityLabel": "Lookback",
              "allowGuest": true,
              "disabled": [Function],
              "onPress": "goToLookback",
              "text": "Lookback",
            },
            Object {
              "accessibilityLabel": "Development Options",
              "allowGuest": true,
              "disabled": [Function],
              "onPress": "showDevOptions",
              "text": "Development Options",
            },
          ],
        },
        "getRowCount": [Function],
      }
    }
    renderFooter={[Function]}
    renderHeader={[Function]}
    renderRow={[Function]}
    renderSectionHeader={[Function]}
    scrollsToTop={true}
  />
</View>
`;

exports[`build:app:more 1`] = `"build:app:more"`;
